# hfict-aad

./: LICENSE
Aufgaben/Aufgabenblatt 2/: CMakeLists.txt
Aufgaben/Aufgabenblatt 3/: CMakeLists.txt  README.md
Aufgaben/Aufgabenblatt 4/: CMakeLists.txt
Aufgaben/Aufgabenblatt 5/: CMakeLists.txt
Aufgaben/Aufgabenblatt 6/: CMakeLists.txt  graph.cpp  graph.h
Aufgaben/Aufgabenblatt 7/: CMakeLists.txt
Aufgaben/Template/: CMakeLists.txt
Klausur/: CMakeLists.txt  KlausurAbgabe.cpp  KlausurUtils.h  _Make.bat
Klausur 1/: Klausur03NOV2018  Klausur03NOV2018.cpp  KlausurAbgabe.cpp  _Make.sh  _Run.bat
Klausur 2/: CMakeLists.txt  Klausur15DEC2018  Klausur15DEC2018.cpp  KlausurUtils.cpp  KlausurUtils.h  _Make.bat  _Make.sh  _Run.bat
MinHeap/: Main.cpp  MinHeap.cpp  MinHeap.h  MinHeapPrinter.cpp  MinHeapPrinter.h  Trunk.h  _Make.bat  _Run.bat
Unterricht/Uebung_MaxHeap/: CMakeLists.txt  HeapUtils.cpp  HeapUtils.h  main.cpp
Unterricht/W11/: CMakeLists.txt  MaxHeap.cpp  MaxHeap.h  ProcessList.cpp  ProcessList.h  main.cpp
Unterricht/W13/: CMakeLists.txt  main.cpp
Unterricht/W14/: CMakeLists.txt  main.cpp
Unterricht/W15/: CMakeLists.txt  sequence.cpp  strmatch.cpp
Unterricht/W3_W4/: Element.cpp  List.cpp
Unterricht/W7/: CMakeLists.txt  InsertionSort.cpp  InsertionSort.h  main.cpp
Unterricht/W8/: CMakeLists.txt  InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  QuickHerzig.cpp  QuickHerzig.h  QuickSort.cpp  QuickSort.h  Sort.h  main.cpp
Unterricht/W9/: CMakeLists.txt  KlausurUtils.cpp  Node.cpp  Node.h  Tree.cpp  Tree.h  main.cpp
(+120 files in other folders)
